[package]
name = "fan-controller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fan-rx"
path = "src/rx.rs"

[[bin]]
name = "fan-tx"
path = "src/tx.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
num = "0.4"
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
soapysdr = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
